--- a/src/view-user.html
+++ b/src/view-user.html
@@ -122,7 +122,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         if (currentChallengeId && this.userChallenges) {
           show = !this.userChallenges.find(item => item.$key === currentChallengeId);
         }
-        return false;
+        return true;
 			}
     }
 
